tests/NormalTests/paczka1/fuzzy1/96013383.err
Error in line 17: Z92K S857 -2,6
Error in line 13: Z92K S857 47,9
Error in line 27: i6dlws S851 29,7
Error in line 34: i6dlws S857 -1,2
Error in line 18: 7QSHt487ePP S851 50,0
